--- a/4) Optimization_and_Regularization/4_1_Optimization_MNIST_Digits.ipynb
+++ b/4) Optimization_and_Regularization/4_1_Optimization_MNIST_Digits.ipynb
@@ -638,7 +638,7 @@
     "    return predictions\n",
     "\n",
     "  def score(self, X, y_true):\n",
-    "    y_pred = model.predict(X_test.T)\n",
+    "    y_pred = self.predict(X_test.T)\n",
     "    y_true = np.argmax(y_test, axis=1)\n",
     "    accuracy = np.mean(y_pred == y_true)\n",
     "    return accuracy"
